tsx converter few changes